MC-1 extracted helper and utils functions
