# app.js
@@ -6,16 +6,14 @@ import bodyParser from 'body-parser';
 import swaggerUi from 'swagger-ui-express';
 import YAML from 'yamljs';
 
+import calculatorRoutes from './routers/calculatorRoutes.js';
+
 const swaggerDocument = YAML.load('./swagger.yaml');
 const HOSTNAME = '0.0.0.0';
 const PORT = process.env.PORT || 3001;
 const app = express();
 const server = http.createServer(app);
-const PaymentSchedule = {
-    BIWEEKLY: 'BIWKLY',
-    ACCELERATED_BIWEEKLY: 'ACC_BIWKLY',
-    MONTHLY: 'MTHLY'
-}
+
 app.use('/api-docs', swaggerUi.serve,   swaggerUi.setup(swaggerDocument));
 app.use(logger('dev'));
 app.use(bodyParser.json());
@@ -25,28 +23,7 @@ app.use((req, res, next) => {
     res.header("Access-Control-Allow-Origin", process.env.ORIGIN || "*");
     next();
 });
-
-app.get('/health', (req, res) => res.status(200).send('Mortgage Calculator is healthy'));
-
-app.post('/v1/calculator', (req, res) => {
-    try {
-        let { propertyPrice, downPayment, interestRate, amortizationPeriod, paymentSchedule } = req.body;
-
-        let numPaymentsPerYear = paymentSchedule.toUpperCase() === PaymentSchedule.BIWEEKLY ? 26 : 12;
-        let principal = propertyPrice - (propertyPrice * (downPayment/100));
-        let interestRatePerSchedule = interestRate/100/numPaymentsPerYear;
-        let totalNumPayment = amortizationPeriod * numPaymentsPerYear;
-
-        let paymentPerSchedule = principal * ((interestRatePerSchedule * Math.pow(1 + interestRatePerSchedule, totalNumPayment) )/(Math.pow(1 + interestRatePerSchedule, totalNumPayment) - 1));
-        if (paymentSchedule.toUpperCase() === PaymentSchedule.ACCELERATED_BIWEEKLY) {
-            paymentPerSchedule /= 2;
-        }
-        let roundedInCurrency = parseFloat(paymentPerSchedule).toFixed(2);
-        return res.send({paymentPerSchedule: roundedInCurrency});
-    } catch (err) {
-        return res.status(400).send({ error:err});
-    }
-});
+app.use('/mortgage', calculatorRoutes);
 
 server.listen(PORT, HOSTNAME, () => {
     console.log(`Server running at http://${HOSTNAME}:${PORT}/`);
