# swagger.yaml
@@ -9,7 +9,7 @@ servers:
   - url: https://sheltered-escarpment-94741.herokuapp.com
     description: production environment
 paths:
-  /v1/calculator:
+  /mortgage/v1/calculator:
     post:
       summary: Calculate a mortgage payment per payment schedule.
       description: Mortgage Calculator calculates mortgage payment
@@ -43,16 +43,22 @@ components:
           description: The annual interest rate
         amortizationPeriod:
           type: number
-          description: The length of time to pay off mortgage
+          description: The length of time to pay off mortgage in years
         paymentSchedule:
           type: string
           enum: [BIWKLY, ACC_BIWKLY, MTHLY]
           description: >
               Mortgage Payment Schedule:
-                
+
                 * `BIWKLY` - Biweekly payments, total 26 payments per year
                 * `ACC_BIWKLY` - Accelerated Biweekly payments.  total 26 payments per year, each payment is half of monthly payment
                 * `MTHLY` - Monthly payments - total 12 payments per year
+      example:
+        propertyPrice: 1500000
+        downPayment: 150000
+        interestRate: 0.0154
+        amortizationPeriod: 10
+        paymentSchedule: MTHLY
     MortgagePaymentPerSchedule:
       properties:
         paymentPerSchedule:
